Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
12.3
-
None
-
Not for Release Notes
-
Q1/2026 Server Maintenance
Description
MDEV-32570 : Fragment ROW replication events larger than max_packet_size
./mtr rpl_broken_event_stream.test --mariadbd=--max-allowed-packet=2G --mariadbd=--binlog-format=ROW
|
|
--source include/master-slave.inc
|
|
|
CREATE TABLE t1 (a INT AUTO_INCREMENT PRIMARY KEY, data LONGBLOB); |
SET @blob = REPEAT('A', 1024 * 1024 * 1024); |
INSERT INTO t1 VALUES (NULL, @blob); |
|
|
--sleep 5
|
--connection slave
|
--query_vertical SHOW SLAVE STATUS
|
|
Resulting error:
2026-01-26 10:30:00 7 [ERROR] Slave SQL: Broken Partial_rows_log_event stream. Found Rotate, expected Partial_rows_log_event 2 / 2, Gtid 0-1-2, Internal MariaDB error code: 4243
|
2026-01-26 10:30:00 7 [ERROR] Error running query, slave SQL thread aborted. Fix the problem, and restart the slave SQL thread with "SLAVE START". We stopped at log 'master-bin.000001' position 512; GTID position '0-1-1'
|
2026-01-26 10:30:00 7 [Note] Slave SQL thread exiting, replication stopped in log 'master-bin.000001' at position 512; GTID position '0-1-1', master: 127.0.0.1:19000
|
Attachments
Issue Links
- is caused by
-
MDEV-32570 Fragment ROW replication events larger than max_packet_size
-
- Closed
-