MDEV-38639: Slave fails with Broken Partial_rows_log_event stream

It is valid for a transaction to span mulitple relay logs due to
writing more than max_relay_log_size bytes in a single event. The logic
for assembling Partial_rows_log_events together didn't consider this,
and would error when seeing a Rotate event that was added by the relay
log rotation logic. This error check is corrected to allow for internal
events to be put between Partial_rows_log_events.